# traccc

./: CMakeLists.txt
cmake/: traccc-detray.cmake
core/include/edm/: container.hpp
core/include/seeding/: spacepoint_binning.hpp  spacepoint_binning_helper.hpp
core/include/seeding/detail/: seeding_config.hpp
core/include/traccc/edm/: measurement.hpp
core/include/traccc/utils/: memory_resource.hpp
device/cuda/: CMakeLists.txt
device/cuda/src/ccl/: clusterization_algorithm.cu
device/sycl/: CMakeLists.txt
device/sycl/include/seeding/: doublet_counting.hpp  doublet_finding.hpp  seed_finding.hpp  seed_selecting.hpp  triplet_counting.hpp  triplet_finding.hpp  weight_updating.hpp
device/sycl/include/sycl/seeding/: doublet_counting.hpp  doublet_finding.hpp  seed_finding.hpp  seed_selecting.hpp  triplet_counting.hpp  triplet_finding.hpp  weight_updating.hpp
device/sycl/include/sycl/seeding/detail/: sycl_helper.hpp
device/sycl/include/traccc/sycl/clusterization/: clusterization_algorithm.hpp
device/sycl/include/traccc/sycl/seeding/: seed_finding.hpp  seeding_algorithm.hpp  spacepoint_binning.hpp  track_params_estimation.hpp
device/sycl/include/traccc/sycl/seeding/detail/: sycl_helper.hpp
device/sycl/src/clusterization/: cluster_counting.hpp  cluster_counting.sycl  cluster_finding.cpp  clusterization_algorithm.cpp  clusterization_algorithm.sycl  clusters_sum.hpp  clusters_sum.sycl  component_connection.hpp  component_connection.sycl  measurement_creation.hpp  measurement_creation.sycl  spacepoint_formation.hpp  spacepoint_formation.sycl
device/sycl/src/seeding/: doublet_counting.cpp  doublet_counting.sycl  doublet_finding.cpp  doublet_finding.sycl  seed_finding.sycl  seed_selecting.cpp  seed_selecting.hpp  seed_selecting.sycl  seeding_algorithm.cpp  spacepoint_binning.sycl  sycl_helper.hpp  track_params_estimation.sycl  triplet_counting.cpp  triplet_counting.hpp  triplet_counting.sycl  triplet_finding.cpp  triplet_finding.hpp  triplet_finding.sycl  weight_updating.cpp  weight_updating.hpp  weight_updating.sycl
device/sycl/src/utils/: calculate1DimNdRange.sycl
examples/algorithms/: CMakeLists.txt
examples/algorithms/sycl/: CMakeLists.txt
examples/run/cuda/: CMakeLists.txt  cuda_copy_example.cpp  seq_example_cuda.cpp
examples/run/sycl/: CMakeLists.txt  seeding_example_sycl.cpp  seeding_example_sycl.sycl  seq_example_sycl.sycl  syclGridExample.sycl
tests/cpu/: compare_with_acts_seeding.cpp
(+19 files in other folders)
